Added descriptions to image headers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <b>Image 2:</b> 
 <br>
 <img src = img/Enlight243.jpg alt ="Enlight">
-
+<br>
+<br/>
+<b>Image 3:</b> 
+<br>
+<img src = img/RVA.jpg alt ="RVA">
+<br>
+<br/>
 
 </body>
 </html>
