added descriptions to image headers

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 <img src = img/screenshot.png alt ="Business Models Screenshot">
 <br>
 <br/>
-<b>Image 2:</b> 
+<b>Image 2: Enlightening message</b> 
 <br>
 <img src = img/Enlight243.jpg alt ="Enlight">
 <br>
 <br/>
-<b>Image 3:</b> 
+<b>Image 3: RVA</b> 
 <br>
 <img src = img/RVA.jpg alt ="RVA">
-<br>
-<br/>
 
 </body>
 </html>
