Added the new image to the index.html file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <b>Image 3: RVA</b> 
 <br>
 <img src = img/RVA.jpg alt ="RVA">
+<br>
+<br/>
+<b>Image 3: Richmond</b> 
+<br>
+<img src = img/Richmond.jpg alt ="Richmond">
 
 </body>
 </html>
