Added hyperlink to new image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 <br/>
 <b>Image 3: Richmond</b> 
 <br>
+<p><a href="https://en.wikipedia.org/wiki/Richmond,_Virginia">
 <img src = img/Richmond.jpg alt ="Richmond">
+</a></p>
 
 </body>
 </html>
