Resized all of the images in the index.html

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     </H1>
 <b>Exercise 1:</b> Add an image
 <br>
-<img src = img/screenshot.png alt ="Business Models Screenshot">
+<img src = img/screenshot.png alt ="Business Models Screenshot" width="500">
 <br>
 <br/>
 <b>Image 2: Enlightening message</b> 
 <br>
-<img src = img/Enlight243.jpg alt ="Enlight">
+<img src = img/Enlight243.jpg alt ="Enlight" width="500">
 <br>
 <br/>
 <b>Image 3: RVA</b> 
 <br>
-<img src = img/RVA.jpg alt ="RVA">
+<img src = img/RVA.jpg alt ="RVA" width="500">
 <br>
 <br/>
 <b>Image 3: Richmond</b> 
 <br>
 <p><a href="https://en.wikipedia.org/wiki/Richmond,_Virginia">
-<img src = img/Richmond.jpg alt ="Richmond">
+<img src = img/Richmond.jpg alt ="Richmond" width="500">
 </a></p>
 
 </body>
